--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@progress/kendo-drawing": "^0.15.5",
     "@progress/kendo-theme-default": "^2.28.1",
     "@swimlane/ngx-datatable": "^7.3.0",
+    "angularfire2": "^2.0.0-beta.8",
     "change-case": "^3.0.0",
     "core-js": "^2.4.1",
+    "firebase": "^3.8.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.15.0",
     "ng2-translate": "5.0.0",
