--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@progress/kendo-theme-default": "^2.28.1",
     "@swimlane/ngx-datatable": "^7.3.0",
     "angularfire2": "^2.0.0-beta.8",
+    "bootstrap": "^3.3.7",
     "change-case": "^3.0.0",
     "core-js": "^2.4.1",
     "firebase": "^3.8.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.15.0",
+    "ng2-bootstrap": "^1.6.3",
     "ng2-translate": "5.0.0",
     "ng2-validation": "3.1.3",
     "rxjs": "^5.1.0",
