--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngui/map": "^0.17.3",
     "@progress/kendo-angular-buttons": "^0.24.0",
     "@progress/kendo-angular-dialog": "^0.20.0",
     "@progress/kendo-angular-dropdowns": "^0.39.0",
@@ -38,12 +39,14 @@
     "@progress/kendo-drawing": "^0.15.5",
     "@progress/kendo-theme-default": "^2.28.1",
     "@swimlane/ngx-datatable": "^7.3.0",
+    "@types/googlemaps": "^3.26.9",
     "angularfire2": "^2.0.0-beta.8",
     "change-case": "^3.0.0",
     "core-js": "^2.4.1",
     "firebase": "^3.8.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.15.0",
+    "ng2-map": "^0.16.5",
     "ng2-translate": "5.0.0",
     "ng2-validation": "3.1.3",
     "rxjs": "^5.1.0",
