--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.15.0",
     "ng2-translate": "5.0.0",
     "ng2-validation": "3.1.3",
+    "ngx-facebook": "^2.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.7"
   },
