--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@progress/kendo-theme-default": "^2.28.1",
     "@swimlane/ngx-datatable": "^7.3.0",
     "@types/google-maps": "^3.2.0",
+    "angular2-image-upload": "^0.5.1",
+    "angular2-ui-switch": "^1.2.0",
     "angularfire2": "^2.0.0-beta.8",
     "change-case": "^3.0.0",
     "core-js": "^2.4.1",
